--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="text"></div>
+    <div class="result"></div>
+    <script src="index.js"></script>
 </body>
 </html>
+
+
+git initial
+git status
+git add.
+git commit -m "Text"
+git remote https://github.com/holzigitovdaniel73-byte/first-project-b6.git
+git push -u origin master ||main
+
+git status
+git add. 
+git status
+git commit -m "Text"
+git push
