--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="text"></div>
+    <div class="salam"></div>
     <div class="result"></div>
     <script src="index.js"></script>
 </body>
